--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn core.wsgi:application -b 0.0.0.0:8000
     volumes:
       - .:/usr/src/app/
     ports:
@@ -12,6 +12,14 @@ services:
       - ./.env
     depends_on:
       - db
+  nginx:
+    image: nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - web
   db:
     image: postgres:15
     volumes:
